--- a/Labo 9/opdracht airbus/style.css
+++ b/Labo 9/opdracht airbus/style.css
@@ -5,9 +5,11 @@ body{
 .top{
     height: 200px;
     background-image:url("fotos/bgsky3.jpg");
+    background-repeat: no-repeat;
+    background-position: bottom;
     text-align: center;
     color:darkblue;
-    display:flex;
+    display:block;
 }
 .main{
     display:block;
@@ -18,8 +20,9 @@ body{
     margin-right:20px;
 }
 .plane{
-    width:300px;
-    height:150px;
+    position: absolute;
+    right: 100px;
+    top: 50px;
 }
 .boven{
     font-size: 300%;
